# rotary_logger

./: .gitignore  CODE_OF_CONDUCT.md  COMMIT_CONVENTION.md  CONTRIBUTING.md  README.md  action_test.sh  manual_pipe_test.py  pyproject.toml  requirements.build.txt  requirements.txt  rotary_logger.code-workspace
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: document_generator.yaml  publish_locally.yaml  python-package.yml  run_unit_tests.yaml
docs_input/: constants.md  file_instance.md  rotary_logger.md  tee_stream.md
doxygen_generation/: Doxyfile
doxygen_generation/html/: footer.html  header.html  header_include.html
doxygen_generation/html/files/icon/: site.webmanifest
doxygen_generation/latex/: latex_footer.tex  latex_header.tex
doxygen_generation/latex/stylesheet/: stylesheet.tex
doxygen_generation/man/: installer.sh
doxygen_generation/rtf/stylesheet/: stylesheet.rtf
rotary_logger/: __init__.py  __main__.py  constants.py  entrypoint.py  file_instance.py  rogger.py  rotary_logger.py  rotary_logger_cls.py  tee_stream.py
tests/: conftest.py  test_ask_question.py  test_constants.py  test_control_functions.py  test_file_instance.py  test_integration_writes.py  test_rotary_integration.py  test_rotary_logger_verify_path.py  test_split_logging.py  test_tee_stream_basic.py
